scripts/kubernetes/03-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rhgov-workshops
  namespace: rhgov-workshops
  labels:
    app: rhgov-workshops
spec:
  ports:
    - port: 8080
      name: web
  selector:
    app: rhgov-workshops
